--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-vlc-media-player",
-  "version": "1.0.98",
+  "version": "1.1.0",
   "description": "React native media player for video streaming and playing. Supports RTSP,RTMP and other protocols supported by VLC player",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,11 @@
   "author": "rmilinda@gmail.com",
   "dependencies": {
     "react-native-slider": "^0.11.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^10.2.0"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
   },
   "repository": {
     "type": "git",
@@ -32,8 +36,8 @@
   },
   "homepage": "https://github.com/razorRun/react-native-vlc-media-player#readme",
   "devDependencies": {
-    "@expo/config-plugins": "^7.2.2",
-    "@types/react": "~18.2.14"
+    "@expo/config-plugins": "^9.0.0",
+    "@types/react": "^19.0.0"
   },
   "typings": "index.d.ts"
 }
