--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-vlc-media-player",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "React native media player for video streaming and playing. Supports RTSP,RTMP and other protocols supported by VLC player",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "media",
     "video"
   ],
-  "author": "rmilinda@gmail.com",
+  "author": "nesimiztrk@gmail.com",
   "dependencies": {
     "react-native-slider": "^0.11.0",
     "react-native-vector-icons": "^10.2.0"
