--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-vlc-media-player",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "React native media player for video streaming and playing. Supports RTSP,RTMP and other protocols supported by VLC player",
   "main": "index.js",
   "scripts": {
@@ -28,13 +28,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/razorRun/react-native-vlc-media-player.git"
+    "url": "git+https://github.com/bynuco/react-native-vlc-media-player/"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/razorRun/react-native-vlc-media-player/issues"
+    "url": "https://github.com/bynuco/react-native-vlc-media-player/issues"
   },
-  "homepage": "https://github.com/razorRun/react-native-vlc-media-player#readme",
+  "homepage": "https://github.com/bynuco/react-native-vlc-media-player/#readme",
   "devDependencies": {
     "@expo/config-plugins": "^9.0.0",
     "@types/react": "^19.0.0"
